--- a/TradelizeWebPortal/TradelizeWebPortal.csproj
+++ b/TradelizeWebPortal/TradelizeWebPortal.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Pages\Base.cs" />
     <Compile Include="Pages\Login.cs" />
+    <Compile Include="Pages\Registration.cs" />
     <Compile Include="Settings\Browser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TestAuthorizetion.cs" />
