--- a/TradelizeWebPortal/TradelizeWebPortal.csproj
+++ b/TradelizeWebPortal/TradelizeWebPortal.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Settings\Browser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TestAuthorizetion.cs" />
+    <Compile Include="Tests\TestRegistration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
