--- a/TradelizeWebPortal/TradelizeWebPortal.csproj
+++ b/TradelizeWebPortal/TradelizeWebPortal.csproj
@@ -59,8 +59,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\Base.cs" />
+    <Compile Include="Pages\Funds.cs" />
     <Compile Include="Pages\Login.cs" />
     <Compile Include="Pages\Registration.cs" />
+    <Compile Include="Pages\Score.cs" />
     <Compile Include="Settings\Browser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TestAuthorizetion.cs" />
