--- a/TradelizeWebPortal/TradelizeWebPortal.csproj
+++ b/TradelizeWebPortal/TradelizeWebPortal.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisposableMailServices\Yopmail.cs" />
     <Compile Include="Pages\Base.cs" />
     <Compile Include="Pages\Funds.cs" />
     <Compile Include="Pages\Login.cs" />
