--- a/TradelizeWebPortal/TradelizeWebPortal.csproj
+++ b/TradelizeWebPortal/TradelizeWebPortal.csproj
@@ -56,17 +56,23 @@
     <Reference Include="WebDriver, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net45\WebDriver.dll</HintPath>
     </Reference>
+    <Reference Include="WebDriver.Support, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.3.141.0\lib\net45\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DisposableMailServices\Yopmail.cs" />
     <Compile Include="Pages\Base.cs" />
     <Compile Include="Pages\Funds.cs" />
     <Compile Include="Pages\Login.cs" />
+    <Compile Include="Pages\Mirroring.cs" />
+    <Compile Include="Pages\Profile.cs" />
     <Compile Include="Pages\Registration.cs" />
     <Compile Include="Pages\Score.cs" />
     <Compile Include="Settings\Browser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TestAuthorizetion.cs" />
+    <Compile Include="Tests\TestMirroringModalWindows.cs" />
     <Compile Include="Tests\TestRegistration.cs" />
   </ItemGroup>
   <ItemGroup>
